CSS fix for actor on small screen

--- a/src/movie.scss
+++ b/src/movie.scss
@@ -1,5 +1,6 @@
 .container {
     position: relative;
+    padding-bottom: 60px;
     h2,
     p {
         margin-top: 5px;
